<resources>
    <string name="app_name">MeetYou</string>
    <string name="id_text">账号:</string>
    <string name="password_text">密码:</string>
    <string name="homePage">主页</string>
    <string name="concern">关注</string>
    <string name="personCenter">个人中心</string>
    <string name="publish">发布</string>
    <string name="gender_title">性别</string>
    <string name="meetyou">MeetYou</string>
    <string name="login_input_account">请输入账号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">修改密码？</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="input_password_again">再次输入新密码</string>
    <string name="affirm">确认</string>
    <string name="question">你最喜欢吃的食物？</string>
    <string name="answer">请输入你的密码</string>
    <string name="register_account">学生账号</string>
    <string name="register_password">密码</string>
    <string name="register_nickname">昵称</string>
    <string name="register_phone_number">手机号码</string>
    <string name="build_account">创建账号</string>
    <string name="search">Search</string>
    <string name="classify_search">Classify Search</string>
    <string name="concern_activity">关注的活动</string>
    <string name="concern_friend">关注的好友</string>
    <string name="user_account">账号:</string>
    <string name="activity_theme">主题:</string>
    <string name="activity_time">活动时间: </string>
    <string name="person_number">人数: </string>
    <string name="watch_comment">查看评论</string>
    <string name="take_photo">拍照</string>
    <string name="choose_photo_from_album">从手机相册中选择</string>
    <string name="head_picture">头像</string>
    <string name="account">账号</string>
    <string name="gender">性别</string>
    <string name="contact_way">联系方式</string>
    <string name="signature">个性签名</string>
    <string name="published_activities">已发布的活动</string>
    <string name="is_user_info_public">用户信息是否开放</string>
    <string name="social_contact">社交</string>
    <string name="attend">参加</string>
    <string name="cancel_attend">取消参加</string>
    <string name="yes">是</string>
    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>
