<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:background="#f8f8f8"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        toolbar:title="@string/app_name"
        toolbar:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_input"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <com.example.yang.meetyou.views.CleanEditText
            android:id="@+id/et_account"
            style="@style/login_edit_style"
            android:hint="@string/login_input_account"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f8f8f8"/>

        <com.example.yang.meetyou.views.CleanEditText
            android:id="@+id/et_password"
            style="@style/login_edit_style"
            android:hint="@string/login_input_password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/linear_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#00BFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#00BFFF"
        android:textSize="18sp" />


    <CheckBox
        android:id="@+id/cb_remember_password"
        android:layout_alignStart="@+id/bt_sign_up"
        android:layout_below="@+id/bt_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:gravity="center"
        android:textColor="#00BFFF"
        android:textSize="15sp"
        android:text="@string/remember_password" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_alignEnd="@+id/bt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/bt_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="#00BFFF"
        android:textSize="15sp" />

</RelativeLayout>
