<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f8f8f8"
    android:orientation="vertical"
    tools:context="com.example.yang.meetyou.accounts.SignUpActivity">

    <LinearLayout
        android:id="@+id/layout_sign_up_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <com.example.yang.meetyou.views.CleanEditText
            android:id="@+id/et_sing_up_account"
            android:hint="@string/register_account"
            style="@style/login_edit_style"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#f8f8f8"/>

        <com.example.yang.meetyou.views.CleanEditText
            android:id="@+id/et_sing_up_password"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            style="@style/login_edit_style"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#f8f8f8"/>

        <com.example.yang.meetyou.views.CleanEditText
            android:id="@+id/et_nickname"
            android:hint="@string/register_nickname"
            style="@style/login_edit_style"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#f8f8f8"/>

        <com.example.yang.meetyou.views.CleanEditText
            android:id="@+id/et_phone_number"
            android:hint="@string/register_phone_number"
            style="@style/login_edit_style"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                android:text="@string/gender_title"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/gender_title"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/build_account"
        android:textColor="#5c5c5c"
        android:textSize="16sp"
        android:background="@drawable/btn_login_selector"
        android:layout_below="@+id/layout_sign_up_account"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
