<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:toolbar="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        toolbar:title="@string/app_name"
        toolbar:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_concern"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMenuBar"
        android:padding="15dp"
        >
        <TextView
            android:id="@+id/tv_concernActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/concern_activity"
            android:background="@drawable/bg_concern_activity"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv_concernFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/concern_friend"
            android:background="@drawable/bg_concern_activity"
            android:textSize="20sp"/>

    </RelativeLayout>

    <View
        android:id="@+id/view_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_concern"
        />
    <ListView
        android:id="@+id/list_view_concern_activity"
        android:layout_below="@+id/view_line1"
        android:layout_above="@+id/menuBar"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent"/>

    <ListView
        android:id="@+id/list_view_concern_friend"
        android:layout_below="@+id/rl_concern"
        android:layout_above="@+id/view_line"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/menuBar"
        />


    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMenuBar"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_home_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homePage"
            android:textSize="20dp"
            android:gravity="center"

            />
        <TextView
            android:id="@+id/tv_concern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/social_contact"
            android:textColor="@color/menuSelected"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/publish"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_personalCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/personCenter"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>

