<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:toolbar="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        toolbar:title="@string/app_name"
        toolbar:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>


    <ListView
    android:layout_above="@+id/view_line"
        android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_activity"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/menuBar"
        />

    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMenuBar"
        android:padding="10dp"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_home_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homePage"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/menuSelected"
            />
        <TextView
            android:id="@+id/tv_concern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/social_contact"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/publish"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_personalCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/personCenter"
            android:gravity="center"/>
    </LinearLayout>

    <View android:layout_width="0dip"
          android:layout_height="0dip"
          android:focusableInTouchMode="true" />
</RelativeLayout>
