<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yang.meetyou.accounts.ChangePasswordActivity">

    <com.example.yang.meetyou.views.CleanEditText
        android:id="@+id/et_new_password"
        style="@style/login_edit_style"
        android:hint="@string/new_password"
        android:layout_marginTop="50dp"/>

    <com.example.yang.meetyou.views.CleanEditText
        android:id="@+id/et_new_password_again"
        style="@style/login_edit_style"
        android:hint="@string/input_password_again"
        android:layout_below="@+id/et_new_password"/>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_new_password_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/affirm"
        android:background="@drawable/btn_login_selector"/>

</RelativeLayout>
