<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yang.meetyou.accounts.ForgetPasswordActivity">

    <TextView
        android:id="@+id/tv_security_problem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="20sp"
        android:textColor="#00bbff"/>

    <com.example.yang.meetyou.views.CleanEditText
        android:id="@+id/et_security_problem_answer"
        style="@style/login_edit_style"
        android:layout_below="@+id/tv_security_problem"
        android:layout_marginTop="100dp"
        android:hint="@string/answer"/>

    <Button
        android:id="@+id/btn_commit_security_problem_and_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_security_problem_answer"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/affirm"
        android:background="@drawable/btn_login_selector"/>
</RelativeLayout>
